WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58609
IndexedDB put() should fail adding to object store that uses out-of-line keys and has no key generator and the key parameter was not provided
https://bugs.webkit.org/show_bug.cgi?id=58609
Summary
IndexedDB put() should fail adding to object store that uses out-of-line keys...
Mark Pilgrim (Google)
Reported
2011-04-14 17:24:54 PDT
Original test at
http://mxr.mozilla.org/mozilla2.0/source/dom/indexedDB/test/test_key_requirements.html?force=1#102
tests that Mozilla properly throws a DATA_ERR when calling put() with no second (key) parameter on an object store that was created with no keyPath (out-of-line keys) and no autoIncrement (key generator). According to
http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#widl-IDBObjectStore-put
"""If any of the following conditions are true, this method throws a DATA_ERR exception: ... The object store uses out-of-line keys and has no key generator and the key parameter was not provided."""
Attachments
test case
(1.65 KB, text/html)
2011-04-14 17:25 PDT
,
Mark Pilgrim (Google)
no flags
Details
Patch
(8.20 KB, patch)
2011-04-28 18:53 PDT
,
Mark Pilgrim (Google)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Pilgrim (Google)
Comment 1
2011-04-14 17:25:19 PDT
Created
attachment 89696
[details]
test case
Mark Pilgrim (Google)
Comment 2
2011-04-28 18:53:00 PDT
Created
attachment 91617
[details]
Patch
Mark Pilgrim (Google)
Comment 3
2011-04-28 19:01:38 PDT
***
Bug 58599
has been marked as a duplicate of this bug. ***
Hans Wennborg
Comment 4
2011-05-03 02:11:48 PDT
Unofficial r+.
David Grogan
Comment 5
2011-05-18 13:41:28 PDT
+tony for some r+ and cq+ action
WebKit Commit Bot
Comment 6
2011-05-18 16:43:35 PDT
Comment on
attachment 91617
[details]
Patch Clearing flags on attachment: 91617 Committed
r86804
: <
http://trac.webkit.org/changeset/86804
>
WebKit Commit Bot
Comment 7
2011-05-18 16:43:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug